# tokopedia-scraper

./: README.md  pyproject.toml
src/Tokopedia_Scraper/: json_scheme.json  tokopedia.py
